--- a/css/styles.css
+++ b/css/styles.css
@@ -458,3 +458,153 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
 .footer-links .icon-link:focus {
     background-color: #31d0aa;
 }
+
+.backdrop {
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    background-color: rgba(46, 47, 66, 0.4);
+}
+
+.modal {
+    width: 408px;
+    min-height: 584px;
+    border-radius: 4px;
+    background: #FCFCFC;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    padding: 24px;
+}
+
+.modal-close-btn {
+    position: relative;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    margin-left: 336px;
+    cursor: pointer;
+    border: 1px solid rgba(0, 0, 0, 0.10);
+    margin-bottom: 24px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:active {
+    fill: #fff;
+    background-color: #404BBF;
+    border: none;
+}
+
+.close-svg {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.modal-header {
+    color: #2E2F42;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 150%;
+    letter-spacing: 0.32px;
+    margin-bottom: 16px;
+    max-width: 360px;
+}
+
+.modal-form {
+
+}
+
+.modal-field {
+    margin-bottom: 8px
+}
+
+.modal-icon-wrap {
+    position: relative;
+}
+
+.modal-icon {
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.modal-input {
+    width: 100%;
+    height: 58px;
+    padding-left: 38px;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+    outline: transparent;
+}
+
+.modal-input:active,
+.modal-input:focus {
+    border: 1px solid #4D5AE5;
+    
+}
+
+.modal-input:active +.modal-icon,
+ .modal-input:focus + .modal-icon {
+    fill: #4D5AE5;
+}
+
+.modal-label {
+    display: block;
+    margin-bottom: 4px;
+    color: #8E8F99;
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 117%;
+    letter-spacing: 0.48px;
+}
+
+.modal-text {
+    width: 100%;
+    height: 120px;
+    padding: 8px 16px;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+    outline: transparent;
+    margin-bottom: 16px;
+    resize: none;
+}
+
+.modal-text:active,
+.modal-text:focus {
+    border: 1px solid #4D5AE5;
+}
+
+.modal-text::placeholder {
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 117%;
+    letter-spacing: 0.48px;
+}
+
+.modal-submit-btn {
+    color: #fff;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 150%;
+    letter-spacing: 0.64px;
+    background-color: #4D5AE5;
+    border-radius: 4px;
+    padding: 16px 32px;
+    border: none;
+    cursor: pointer;
+}
+
