--- a/css/styles.css
+++ b/css/styles.css
@@ -482,6 +482,8 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
 }
 
 .subscribe-input {
+    outline: none;
+    color: #fff;
     width: 234px;
     padding: 8px 16px;
     background: #2E2F42;
@@ -514,6 +516,12 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     letter-spacing: 0.64px;
     border: none;
     cursor: pointer;
+    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+}
+
+.subscribe-btn:hover,
+.subscribe-btn:focus {
+    background: #404BBF;
 }
 
 .footer-btn-icon {
