--- a/css/styles.css
+++ b/css/styles.css
@@ -484,7 +484,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
 .subscribe-input {
     outline: none;
     color: #ffffff;
-    max-width: 264px;
+    width: 264px;
     height: 40px;
     padding-left: 16px;
     background-color: transparent;
@@ -544,6 +544,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-open {
@@ -561,24 +562,34 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    padding: 24px;
+    padding: 72px 24px 24px 24px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
-    position: relative;
+    position: absolute;
+    top: 24px;
+    right: 24px;
     width: 24px;
     height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #e7e9fc;
+    padding: 0;
     border-radius: 50%;
     margin-left: 336px;
     cursor: pointer;
     border: 1px solid rgba(0, 0, 0, 0.10);
     margin-bottom: 24px;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn:hover,
-.modal-close-btn:active {
+.modal-close-btn:focus {
     fill: #fff;
     background-color: #404BBF;
     border: none;
@@ -589,6 +600,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-header {
@@ -628,15 +640,19 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     left: 16px;
     top: 50%;
     transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input {
     width: 100%;
+    height: 40px;
     height: 58px;
     padding-left: 38px;
     border-radius: 4px;
     border: 1px solid rgba(46, 47, 66, 0.40);
     outline: transparent;
+    background-color: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:active,
@@ -669,6 +685,12 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     border: 1px solid rgba(46, 47, 66, 0.40);
     outline: transparent;
     resize: none;
+    font-size: 12px;
+    line-height: 117%;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    background-color: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-text:active,
@@ -699,7 +721,8 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     border: none;
     cursor: pointer;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    width: 169px;
+    min-width: 169px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .check-text {
@@ -713,7 +736,7 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     justify-content: center;
 }
 
-.check-text a {
+.privacy-link {
     color: #4D5AE5;
     font-size: 12px;
     font-style: normal;
@@ -724,18 +747,21 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     fill: transparent;
 }
 
-.check-text span {
-    display: flex;align-items: center;
+.privacy-checkbox {
+    display: inline-flex;
+    align-items: center;
     justify-content: center;
     width: 16px;
     height: 16px;
+    fill: transparent;
     border-radius: 2px;
     border: 1px solid rgba(46, 47, 66, 0.40);
     background-color: #fff;
     margin-right: 8px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.check-input:checked + .check-text span {
+.check-input:checked + .check-text .privacy-checkbox {
     background-color: #404BBF;
     fill: #F4F4FD;
     border: none;
