--- a/css/styles.css
+++ b/css/styles.css
@@ -760,6 +760,12 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     align-items: center;
     }
 
+    .display {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+    }
+
 .check-input:checked + .check-text .policy-checkbox {
     background-color: #404BBF;
     fill: #F4F4FD;
