--- a/css/styles.css
+++ b/css/styles.css
@@ -306,6 +306,8 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
 
 .social-icon {
     padding: 0;
+    width: 40px;
+    height: 40px;
 }
 
 .icon-link {
@@ -315,7 +317,6 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    padding: 12px;
     background-color: #4D5AE5;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
@@ -508,7 +509,6 @@ box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     padding: 8px 24px;
     justify-content: center;
     align-items: center;
-    gap: 16px;
     min-width: 165px;
     border-radius: 4px;
     background: #4D5AE5;
